# mysdk

sql/: CMakeLists.txt  Readme.txt
sql/proj/: TSDK_mysql.sln
sql/proj/TSDK_mysql/: TSDK_mysql.vcxproj
sql/proj/TSDK_mysql_test/: TSDK_mysql_test.vcxproj
sql/src/common/: db_common.h  db_tools.h  tdefine.h
sql/src/project/TSDK_mysql_test/: CMakeLists.txt  main.cpp
sql/src/sdk/TSDK_mysql/: CMakeLists.txt  Tmysql.cpp  Tmysql.h  Tmysql_type.h  tsdk_mysql_api.cpp  tsdk_mysql_api.h
