PROJECT(tsql_sdk)
SET(CMAKE_SYSTEM_NAME Linux)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.8)

SET(CMAKE_C_FLAGS "-O0 -g -ggdb -fPIC -std=gnu99")
SET(CMAKE_CXX_FLAGS "-O0 -g -ggdb -fPIC -std=c++0x")
SET(CMAKE_INSTALL_PREFIX /)
SET(PROJECT_OUT_DIR ${PROJECT_SOURCE_DIR}/build)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_OUT_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_OUT_DIR})
LINK_DIRECTORIES(${PROJECT_OUT_DIR})
ADD_SUBDIRECTORY(src/sdk/TSDK_mysql)
ADD_SUBDIRECTORY(src/project/TSDK_mysql_test)
