INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)

AUX_SOURCE_DIRECTORY(. SRC_DIR)
ADD_LIBRARY(TSDK_mysql SHARED ${SRC_DIR})

TARGET_LINK_LIBRARIES(TSDK_mysql mysqlclient)

SET(CMAKE_C_FLAGS "-O0 -g -ggdb -fPIC -shared")
SET(CMAKE_CXX_FLAGS "-O0 -g -ggdb -fPIC -shared -std=c++0x")
SET_TARGET_PROPERTIES(TSDK_mysql PROPERTIES OUTPUT_NAME TSDK_mysql)

